syntax = "proto3";

package v2ray.core.proxy.dns;
option csharp_namespace = "V2Ray.Core.Proxy.Dns";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/dns";
option java_package = "com.v2ray.core.proxy.dns";
option java_multiple_files = true;

import "common/net/destination.proto";
import "common/protoext/extensions.proto";

message Config {
  // Server is the DNS server address. If specified, this address overrides the
  // original one.
  v2ray.core.common.net.Endpoint server = 1;
  uint32 user_level = 2;

  bool override_response_ttl = 4;
  uint32 response_ttl = 3;
}

message SimplifiedConfig {
  option (v2ray.core.common.protoext.message_opt).type = "outbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "dns";

  bool override_response_ttl = 4;
  uint32 response_ttl = 3;
}